--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/logo-header/logo-header.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/logo-header/logo-header.component.html
@@ -1,5 +1,5 @@
 <div class="desktop"  (mouseenter)="showLogoIcon = true" (mouseleave)="showLogoIcon = false">
-    <span style="color: #053074;font-size: 30px;outline: none;font-family: Arial, Helvetica, 
+    <span *ngIf="this.isBrandMatrixSurvey" style="color: #053074;font-size: 30px;outline: none;font-family: Arial, Helvetica, 
         sans-serif;text-align: center;padding-top: 20px;">{{bmxItem.componentText}}
     </span>
     <div class="emoji-handle">.</div>
