--- a/src/app/bmx/components/templates/templates.component.html
+++ b/src/app/bmx/components/templates/templates.component.html
@@ -100,7 +100,7 @@
             <td mat-cell *matCellDef="let element">{{ element.index }}</td>
         </ng-container>
         <ng-container matColumnDef="displayName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Template name</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Template Name</th>
             <td mat-cell *matCellDef="let element"> {{element.displayName}} </td>
         </ng-container>
         <ng-container matColumnDef="TemplateName">
