Changed slide buttons depending of radio button selection

--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -207,7 +207,7 @@
                             style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
 
                             <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="0"
-                                max="10">
+                                [max]="this.rowsCount">
                             {{rankingScaleValue}}
                         </div>
                     </div>
