name to questions

--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -176,12 +176,12 @@
     width: 1024px;
     height: 54px;" cdkDragHandle> </div>
     <div style="text-align: center;">
-        <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE TEST NAMES</div>
+        <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE TEST QUESTIONS</div>
         <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
     </div>
     <div>
         <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
-            <mat-label>Copy & Paste TEST NAMES</mat-label>
+            <mat-label>Copy & Paste TEST QUESTIONS</mat-label>
             <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" (paste)="onPaste()" placeholder=""></textarea>
         </mat-form-field>
     </div>
