--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -188,16 +188,16 @@
     <!-- Cards Test Name-->
     <mat-card class="example-card">
       <mat-card-header>
-        <mat-card-title>Test Names</mat-card-title>
+        <mat-card-title>Test Questions</mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <div style="text-align: center;">
-          <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE TEST NAMES</div>
+          <div style="font-size: 16px;margin: 20px;color: #48535e;">PASTE TEST QUESTIONS</div>
           <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
       </div>
       <div>
           <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
-              <mat-label>Copy & Paste TEST NAMES</mat-label>
+              <mat-label>Copy & Paste TEST QUESTIONS</mat-label>
               <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" placeholder="" (ngModelChange)="upLoadNamesAndRationales(testNamesInput)"></textarea>
           </mat-form-field>
           <p style="margin-left: 30px; color: #757575;">
