--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -242,8 +242,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                     </div>
                 </div>
 
-                    <div style="    margin-top: 0.5rem;
-        ">
+                    <div style="margin-top: 0.5rem;">
                         <div style="font-size: 14px;color: #48535e;">CHOOSE RATING ICON</div>
                         <br>
                         <mat-radio-group aria-label="Select an option" [(ngModel)]="ratingScaleIcon">
@@ -287,27 +286,29 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
           </mat-form-field>
       </div>
       <br>
-      <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
+      <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Namese</mat-checkbox>
       <div class="sm-row-box-rkScale">
-        <div>
-            <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
-                <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Minimum:
-                    {{bmxItem.componentSettings[0].minRule}}</div>
-                <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].minRule"
-                    style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].minRule">
+            <div>
+                <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
+                    <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Minimum:
+                        {{bmxItem.componentSettings[0].minRule}}
+                    </div>
+                    <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].minRule"
+                        style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].minRule">
+                </div>
+                <div style="font-size: 13px;color: #48535e;">Min number of selections to vote on</div>
             </div>
-            <div style="font-size: 13px;color: #48535e;">Min number of selections to vote on</div>
-        </div>
-        <div>
-            <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
-                <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Maximun:
-                    {{bmxItem.componentSettings[0].maxRule}}</div>
-                <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
-                    style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
+            <div>
+                <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
+                    <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Maximun:
+                        {{bmxItem.componentSettings[0].maxRule}}
+                    </div>
+                    <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
+                            style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
+                </div>
+                <div style="font-size: 13px;color: #48535e;">Max number of selections to vote on</div>
             </div>
-            <div style="font-size: 13px;color: #48535e;">Max number of selections to vote on</div>
-        </div>
-    </div>
+      </div>
 
   </div>
   <mat-card-content>
