--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -149,7 +149,7 @@
           [ngClass]="{'menu-item-Light': selectedMenuItem === 'reports', 'menu-item-Dark': selectedMenuItem !== 'reports'}"
           (click)="navigateTo('reports')">
           Reports <div>
-            <button (click)="CREATION_VIDEO_PATH='assets/videos/reports.mp4' ; showCreationModalVideo=true; "
+            <button (click)="CREATION_VIDEO_PATH='assets/videos/reports - copia.mp4' ; showCreationModalVideo=true; "
               class="video-button" matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button
               aria-label="ranking">
               <mat-icon style="font-size: 26px; color: white; " class="full-icon">video_library</mat-icon>
